# perfect-scorecard

./: README.md  pyproject.toml
examples/: messy.py
src/perfect_scorecard/: cli.py  core.py  metrics.py
src/vata/: analyzer.py  vata.py
