[project]
name = "vata"  # â† change to "pyqual" or "code-soul" when ready
version = "0.2.0"
description = "Python code quality checker with style analysis and optional fun humanization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "radon>=5.1",
    # optional: "ruff>=0.5"  # add if you want Ruff as a hard dependency
]

[project.scripts]
vata = "vata.cli:main"
# optional alternative name
# pyqual = "vata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
