[project]
name = "vata"
version = "0.2.0"
description = "Python code quality checker with maintainability analysis and optional legacy fun mode"
readme = "README.md"  # create this file later if you want
requires-python = ">=3.9"
dependencies = [
    "radon>=5.1",
]

[project.scripts]
vata = "vata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
